--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "ethers": "^5.7.2",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.8",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
